--- a/basic.css
+++ b/basic.css
@@ -16,14 +16,44 @@
 }
 
 #tooltip{
+  display: none;
   position: relative;
   z-index: 5;
   background-color: #fff;
   padding: 5px;
   height: auto;
-  width: 200px;
+  width: 190px;
+  border: 1px solid #999;
   border-radius: 3px;
   -webkit-box-shadow: 2px 2px 12px 1px rgba(0,0,0,0.35);
   -moz-box-shadow: 2px 2px 12px 1px rgba(0,0,0,0.35);
   box-shadow: 2px 2px 12px 1px rgba(0,0,0,0.35);
+}
+
+#tooltip:before{
+  border: 5px solid transparent;
+  border-left-color: #fff;
+  border-right-width: 0px;
+  content: "";
+  display: block;
+  height: 0;
+  width: 0;
+  position: absolute;
+  top: 9px;
+  left: 200px;
+  z-index: 6;
+}
+
+#tooltip:after{
+  border: 6px solid transparent;
+  border-left-color: #999;
+  border-right-width: 0px;
+  content: "";
+  display: block;
+  height: 0;
+  width: 0;
+  position: absolute;
+  top: 8px;
+  left: 200px;
+  z-index: 4;
 }
