--- a/basic.css
+++ b/basic.css
@@ -56,9 +56,7 @@ body {
   color: #fff;
   border-bottom: 0px solid transparent !important;*/
 }
-/*.contentnav div{
-  float: right !important;
-}*/
+
 .home .homeRightSide{
   width: 100% !important;
     /*padding-left: 0px !important;*/
@@ -75,14 +73,16 @@ body {
 
 .show-arrow{
   position: absolute;
-  width: 50px;
-  height: 50px;
-  background-image: url('https://cdn1.vox-cdn.com/uploads/chorus_asset/file/6783963/arrow-right.0.png');
-  background-size: 50px 40px;
+  height: 46px;
+  width: 26px;
+  left: 190px;
+  background-image: url('https://cdn1.vox-cdn.com/uploads/chorus_asset/file/6786577/arrow1.0.png');
+  background-size: 20px 40px;
   background-repeat: no-repeat;
+  background-position: center;
   cursor: pointer;
-  right: -38px;
-  top: 3px;
+  top: 0px;
+  background-color: rgba(255,255,255,0.25);
 }
 
 .show-arrow.show{
@@ -94,25 +94,20 @@ body {
   -webkit-animation-duration: 1s; /* Chrome, Safari, Opera */
 }
 
-.stationContent{
-  background: rgba(255,255,255,0.25) !important;
-  border-right: 0px solid transparent !important;
+#sidebar{
+  left: -190px;
   position: fixed !important;
   top: 96px !important;
-  border-top: 1px solid rgba(0,0,0,.1) !important;
-  left: -190px !important;
-  -webkit-animation-duration: 1s; /* Chrome, Safari, Opera */
+  border-right: 1px solid rgba(0,0,0,.5) !important;
 }
 
-/*.stationContent:after{
-  content: 'show';
-  left: 0px;
-}*/
-
-/*.stationContent.show{
-  -webkit-animation-duration: 1s; /* Chrome, Safari, Opera */
-  /*left: 0px !important;
-}*/
+.stationContent{
+  background: rgba(255,255,255,0.55) !important;
+  border-right: 0px solid transparent !important;
+  position: relative !important;
+  border-top: 1px solid rgba(0,0,0,.1) !important;
+  /*left: 0px !important;*/
+}
 
 #playerBar, #trackInfo{
   background: rgba(255,255,255,0.25) !important;
@@ -136,20 +131,25 @@ body {
 }
 
 .stationListItem.selected{
-  background: rgba(255,255,255,0.5) !important;
+  background: rgba(255,255,255,0.8) !important;
   color: #ffffff;
   border-color: transparent !important;
   border-top: 0px solid transparent !important;
   border-bottom: 0px solid transparent !important;
 }
 
-.stationListItem.selected ul{
-  color: #ffffff !important;
+.stationListItem ul{
+  color: #000000 !important;
 }
 
-.stationListItem .options{
-  background: rgba(255,255,255,0.5) !important;
+
+/*.stationListItem.selected ul{
   color: #ffffff !important;
+}*/
+
+.stationListItem .options{
+  background: rgba(255,255,255,0.8) !important;
+  /*color: #ffffff !important;*/
 }
 
 .stationNameText, #shuffleIcon{
@@ -175,6 +175,9 @@ body {
 img.spotify, #blocks{
   float: right;
 }
+#blocks{
+  visibility: hidden;
+}
 
 #my-content{
   width: 100%;
@@ -184,19 +187,27 @@ img.spotify, #blocks{
 #my-content #contain{
   margin: auto;
   width: 100%;
-  max-width: 800px;
+  max-width: 1000px;
 }
 
 #my-content #img{
-  height: 300px;
-  width: 300px;
+  /*height: 300px;*/
+  width: 30%;
   display: inline-block;
 }
 
 #my-content #info{
+  width: 68%;
   display: inline-block;
   list-style: none;
   margin-left: 20px;
+  position: relative;
+}
+
+table.table{
+  width:100%;
+  font-size: 14px;
+  margin-top: 15px;
 }
 
 th{
@@ -207,12 +218,16 @@ tr{
   border-bottom: 1px solid rgba(255,255,255,.2) !important;
 }
 
-tr:last-of-type{
+tbody tr:last-of-type{
   border-bottom-width: 0px !important;
 }
 
-td{
-  padding: 3px 5px !important;
+th, td{
+  padding: 6px 0px !important;
+}
+
+.iter{
+  width: 30px;
 }
 
 #img, #info{
@@ -235,4 +250,28 @@ h2{
 
 h4{
   font-size: 18px !important;
+}
+
+#info #album-popularity{
+  position: absolute;
+  border: 1px solid #fff;
+  width: 50px;
+  height: 50px;
+  right: 0px;
+  font-size: 26px;
+  text-align: center;
+  vertical-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+td div{
+  display: inline-block;
+  font-size: 10px;
+  vertical-align:center;
+}
+td .pop{
+  height:5px;
+  background-color:#fff;
+  margin-right: 5px;
 }
